name: L2048
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Max Balushkin
synopsis: 2048 game
description:
category: Game

source-repository head
    type: git
    location: https://bitbucket.org/voidschemer/lambda2048

library
    exposed-modules:
        L2048
    build-depends:
        base >=4.7 && <4.9,
        gloss >=1.9 && <1.10,
        random >=1.1 && <1.2
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

executable l2048
    main-is: Main.hs
    build-depends:
        base -any,
        L2048 -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall

